# rust-dynamodb-test

./: Cargo.toml
src/: impl_raw_sdk.rs  impl_serde_dynamo.rs  main.rs
