[package]
name = "rust-dynamo-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-dynamodb = "0.21.0"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = {version="1.0.89"}
serde_dynamo = { version = "4.0.9", features = ["aws-sdk-dynamodb+0_21"] }
thiserror = {version="1.0.37"}